# DAHU

./: LICENSE  README.md  ancien_truc.txt  erreurs.py  maths.ipynb  maths.py  meca.py  pyproject.toml  readme.md  requirement.txt  requirements.txt  setup.py  test.py
.github/workflows/: main.yml  python-publish.yml
Autres/: pyproject.toml  setup.py
DAHU/: __init__.py  cartes.py  chimie.py  donnees.py  elec.py  erreurs.py  graph.py  main.py  maths.py  meca.py  papiers.py  phy.py  test.py  zizi.py
DAHU.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
Doc (provisoire)/: maths.ipynb
Librairie/: donnees.py  erreurs.py  graph.py  maths.py  meca.py  papiers.py  phy.py  test.html  test.py
giacpy/: MANIFEST.in  README.txt  description.html  mkpredebiantarball.txt  setup.py  test.py
giacpy/debian/: changelog  control  copyright  python-giacpy-qt.files  python-giacpy.preinst  python3-giacpy-qt.files  rules
giacpy/giacpy/: __init__.py  auto-methods.pxi  giacpy.pxd  giacpy.pyi  giacpy.pyx  giacpy2qcas.cpp  giacpy2qcas.pxd  giacpy2qcas.pyx  giacpymisc.h  interrupt.pxi  keywords.pxi
giacpy/giacpy-0.7.1.dist-info/: METADATA  RECORD
giacpy/tests/: bug-libgiac-rowreduction1.2.3-57.py  factor-big.py  katsura9.py  test-glpk+nauty.py  test-save.py  testmplot.py
giacpy/tools/: mkgiacpy_pyi.py  mkkeywords.py
giacpy/win32/: Makefile.giacdll  Makefile.giacpy
giacpy/win64/: Makefile.giacdll  Makefile.giacpy
giacpy/win64/giacpatches/: patch-mingw-icas.diff  patch-win64-pari+mmult_int.diff
src/: __init__.py  donnees.py  erreurs.py  maths.py  papiers.py  phy.py
tests/: test.py
