[tool.poetry]
name = "dahu"
version = "0.0.0.0.1"
description = "Package de calcul formel (pour l'instant ;=) )"
authors = ["LOUVAT SEGURA Anthony <>","CHEMINOT Virgile <>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
giacpy = "0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
