[tool.poetry]
name = "DAHU12"
version = "0.0.0.0.2.1"
description = "Package de calcul formel (pour l'instant ;=) )"
authors = ["LOUVAT SEGURA Anthony","CHEMINOT Virgile"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MoiCAntho/DAHU"
packages = [
    {include = "DAHU"},]

[tool.poetry.dependencies]
python = "^3.7"
giacpy = "0.7.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MoiCAntho/DAHU/issues"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
