[tool.poetry]
name = "DAHU12"
version = "0.0.0.0.2.3"
description = "Package de calcul formel (pour l'instant ;=) )"
authors = ["LOUVAT SEGURA Anthony","CHEMINOT Virgile"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MoiCAntho/DAHU"
packages = [ 
    {include = "DAHU"},]

[tool.poetry.dependencies]
python = "^3.7"
wheel = "^0.41.2"
cython = "^3.0.4"
giacpy = { path = "giacpy" }

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MoiCAntho/DAHU/issues"

[build-system]
requires = ["setuptools>=42", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

packages = [
    { include = "DAHU", from = "." },
    { include = "giacpy/win64", from = "giacpy" },
    { include = "giacpy/win32", from = "giacpy" },
    { include = "giacpy/debian", from = "giacpy"}
    ]